--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h2>Go TTY - The really simple TTY terminal application</h2>
 
         <section id="downloads">
-          <a href="https://github.com/gotty/gotty/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/gotty/gotty/releases/download/v0.8/gotty-0.8.tar.xz" class="btn">Download gotty-0.8.tar.xz</a>
           <a href="https://github.com/gotty/gotty" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
       </div>
