--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@ $ make install
 <a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h3>
 <p> Go TTY is open source released under the GPLv2 license. </p>
 
+<h3>
+<a name="support" class="anchor" href="#support"><span class="octicon octicon-link"></span></a>Support</h3>
+<p>Submit bug reports via github <a href="https://github.com/gotty/gotty/issues">here</a>.</p>
       </section>
     </div>
 
