--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ In session, press ctrl-g + q to quit.
     will simply exit if the device is not present and it will also exit if an
     an established connection is lost (ie. no reconnect).</p>
 
-<p> Go TTY includes full bash autocompletion support.</p>
+<p> Go TTY features full bash autocompletion support.</p>
 <h3>
 <a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h3>
 
