--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ In session, press ctrl-g + q to quit.
 <h3>
 <a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h3>
 
-<p>Install by using autotools:</p>
+<p>Installation using autotools:</p>
 <pre><code>$ ./configure
 $ make
 $ make install
