Removed excess adjectives

--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@ In session, press ctrl-g + q to quit.
    option.</p>
 
 <p> By default the gotty application automatically connects to the provided
-    device if present. If the device is not present it will simply wait for it
+    device if present. If the device is not present it will wait for it
     to appear and then connect. If the connection is lost (eg.  device
-    disconnects) it will simply wait for the device to reappear and then
+    disconnects) it will wait for the device to reappear and then
     reconnect. </p>
 
 <p> However, if the --no-autoconnect option is provided the gotty application
-    will simply exit if the device is not present and it will also exit if an
+    will exit if the device is not present and it will also exit if an
     an established connection is lost (ie. no reconnect).</p>
 
 <p> Go TTY features full bash autocompletion support.</p>
