--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ In session, press ctrl-g + q to quit.
 <h3>
 <a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h3>
 
-<p>Installation using autotools:</p>
+<p>Install steps:</p>
 <pre><code>$ ./configure
 $ make
 $ make install
