--- a/index.html
+++ b/index.html
@@ -54,17 +54,16 @@ Options:
 In session, press ctrl-g + q to quit.
 </code></pre>
 
-<p>The only option which requires a bit of elaboration is perhaps the
-   --no-autoconnect option.</p>
+<p> The only option which requires a bit of elaboration is the --no-autoconnect
+    option. </p>
 
-<p> By default the gotty application automatically connects to the provided
-    device if present. If the device is not present it will wait for it to appear
-    and then connect. If the connection is lost (eg.  device disconnects) it will
-    wait for the device to reappear and then reconnect. </p>
+<p> By default gotty automatically connects to the provided device if present.
+    If the device is not present it will wait for it to appear and then
+    connect. If the connection is lost (eg. device disconnects) it will wait
+    for the device to reappear and then reconnect. </p>
 
-<p> However, if the --no-autoconnect option is provided the gotty application
-    will exit if the device is not present or exit if an established connection is
-    lost.</p>
+<p> However, if the --no-autoconnect option is provided gotty will exit if the
+    device is not present or exit if an established connection is lost. </p>
 
 <p> Go TTY features full bash autocompletion support.</p>
 <h3>
